Changed wording of About page and fixed footer alignment issue

--- a/css/about.css
+++ b/css/about.css
@@ -443,7 +443,7 @@ a {
     margin: 0 auto;
 }
 
-h1 {
+h1, h2 {
     font-size: 2.5rem;
     color: #ffdb15;
     line-height: 1.5;
@@ -463,10 +463,8 @@ p {
     margin-bottom: 1rem;
 }
 
-ul {
+.bullet-list {
     margin-left: -1.5rem;
-    font-size: 1.1rem;
-
 }
 
 .founder-section {
@@ -650,7 +648,6 @@ ul {
     list-style: none;
     padding: 0;
     margin-bottom: 1rem;
-
 }
 
 .footer-links li {
@@ -709,7 +706,7 @@ ul {
 }
 
 .footer-logo {
-    height: 50px;
+    height: 40px;
     width: auto;
     margin: 0;
 }
@@ -718,7 +715,7 @@ ul {
     font-size: 0.9rem;
     margin: 0;
     align-self: flex-end;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins';
     font-weight: 400;
 }
 
@@ -846,7 +843,7 @@ ul {
         height: 600px;
     }
 
-    h1 {
+    h1, h2 {
         font-size: 4rem;
     }
 
@@ -865,7 +862,7 @@ ul {
         background-size: contain;
         pointer-events: none;
         z-index: 11;
-        top: 735px;
+        top: 500px;
         right: 405px;
         width: 650px;
         height: 430px;
