--- a/css/index.css
+++ b/css/index.css
@@ -800,7 +800,7 @@ h1 {
 }
 
 .footer-logo {
-    height: 50px;
+    height: 40px;
     width: auto;
     margin: 0;
 }
