--- a/css/login.css
+++ b/css/login.css
@@ -521,13 +521,6 @@ a {
     margin: 0 1rem;
 }
 
-.footer-heading {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 1rem;
-    margin-bottom: 1rem;
-}
-
 .footer-links {
     list-style: none;
     padding: 0;
@@ -590,7 +583,7 @@ a {
 }
 
 .footer-logo {
-    height: 50px;
+    height: 40px;
     width: auto;
     margin: 0;
 }
@@ -599,7 +592,7 @@ a {
     font-size: 0.9rem;
     margin: 0;
     align-self: flex-end;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins';
     font-weight: 400;
 }
 
